--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.0",
     "gatsby": "^3.3.1",
     "gatsby-plugin-gatsby-cloud": "^2.3.0",
+    "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-image": "^1.3.1",
+    "prettier": "^2.2.1",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-postcss": "^4.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
@@ -29,5 +33,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "tailwindcss": "^2.1.1",
+    "typescript": "^4.2.4"
   }
 }
