--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "@tailwindcss/typography": "^0.4.0",
     "gatsby": "^3.3.1",
     "gatsby-plugin-gatsby-cloud": "^2.3.0",
-    "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-image": "^1.3.1",
-    "prettier": "^2.2.1",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-postcss": "^4.3.0",
+    "gatsby-plugin-preact": "^5.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
     "gatsby-plugin-sharp": "^3.3.1",
     "gatsby-plugin-sitemap": "^3.3.0",
+    "gatsby-plugin-tsconfig-paths": "^1.0.3",
+    "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-sharp": "^3.3.0",
     "postcss": "^8.2.6",
+    "preact": "^10.5.13",
+    "preact-render-to-string": "^5.1.19",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
