--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "$components/*": ["src/components/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
