--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "$components/*": ["src/components/*"],
+      "$images/*": ["src/images/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
