--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/eb-garamond": "^4.2.2",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
+    "dayjs": "^1.10.4",
     "gatsby": "^3.3.1",
     "gatsby-plugin-gatsby-cloud": "^2.3.0",
     "gatsby-plugin-image": "^1.3.1",
