--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.0",
     "dayjs": "^1.10.4",
+    "framer-motion": "^4.1.8",
     "gatsby": "^3.3.1",
     "gatsby-plugin-gatsby-cloud": "^2.3.0",
     "gatsby-plugin-image": "^1.3.1",
@@ -40,6 +41,7 @@
     "react-dom": "^17.0.1",
     "react-h5-audio-player": "^3.7.0",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.31.1",
     "simple-react-lightbox": "^3.6.6"
   },
   "devDependencies": {
