--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-h5-audio-player": "^3.7.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.31.1",
+    "react-qr-code": "^1.1.1",
     "simple-react-lightbox": "^3.6.6"
   },
   "devDependencies": {
