--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^4.1.8",
     "gatsby": "^3.3.1",
     "gatsby-plugin-gatsby-cloud": "^2.3.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^1.3.1",
     "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-postcss": "^4.3.0",
@@ -38,12 +39,16 @@
     "preact-render-to-string": "^5.1.19",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-h5-audio-player": "^3.7.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^8.31.1",
     "react-qr-code": "^1.1.1",
-    "simple-react-lightbox": "^3.6.6"
+    "react-share": "^4.4.0",
+    "react-slick": "^0.28.1",
+    "simple-react-lightbox": "^3.6.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
