--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-share": "^4.4.0",
     "react-slick": "^0.28.1",
     "simple-react-lightbox": "^3.6.6",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
