--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@fontsource/eb-garamond": "^4.3.0",
     "@fontsource/great-vibes": "^4.4.5",
+    "@fontsource/pt-sans-narrow": "^4.4.5",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.1",
+    "classnames": "^2.3.1",
     "dayjs": "^1.10.5",
     "framer-motion": "^4.1.17",
     "gatsby": "^3.6.0",
