--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/archivo-narrow": "^4.4.5",
     "@fontsource/eb-garamond": "^4.3.0",
     "@fontsource/great-vibes": "^4.4.5",
+    "@fontsource/open-sans-condensed": "^4.4.5",
     "@fontsource/pt-sans-narrow": "^4.4.5",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.1",
