--- a/package.json
+++ b/package.json
@@ -15,50 +15,53 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@fontsource/archivo-narrow": "^4.5.12",
-    "@fontsource/eb-garamond": "^4.5.11",
-    "@fontsource/great-vibes": "^4.5.10",
-    "@fontsource/open-sans-condensed": "^4.5.5",
-    "@fontsource/pt-sans-narrow": "^4.5.11",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "classnames": "^2.3.2",
-    "dayjs": "^1.11.7",
-    "framer-motion": "^8.5.4",
-    "gatsby": "^5.5.0",
-    "gatsby-plugin-gatsby-cloud": "^5.5.0",
+    "@fontsource/archivo-narrow": "^4.4.5",
+    "@fontsource/eb-garamond": "^4.3.0",
+    "@fontsource/great-vibes": "^4.4.5",
+    "@fontsource/open-sans-condensed": "^4.4.5",
+    "@fontsource/pt-sans-narrow": "^4.4.5",
+    "@headlessui/react": "^1.7.10",
+    "@heroicons/react": "^2.0.14",
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.1",
+    "classnames": "^2.3.1",
+    "dayjs": "^1.10.5",
+    "framer-motion": "^4.1.17",
+    "gatsby": "^3.6.0",
+    "gatsby-plugin-gatsby-cloud": "^2.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
-    "gatsby-plugin-image": "^3.5.0",
-    "gatsby-plugin-manifest": "^5.5.0",
-    "gatsby-plugin-postcss": "^6.5.0",
-    "gatsby-plugin-preact": "^7.5.0",
-    "gatsby-plugin-react-helmet": "^6.5.0",
-    "gatsby-plugin-sharp": "^5.5.0",
-    "gatsby-plugin-sitemap": "^6.5.0",
-    "gatsby-plugin-tsconfig-paths": "^1.0.6",
-    "gatsby-plugin-typegen": "^3.1.0",
-    "gatsby-source-filesystem": "^5.5.0",
-    "gatsby-transformer-sharp": "^5.5.0",
-    "postcss": "^8.4.21",
-    "preact": "^10.11.3",
-    "preact-render-to-string": "^5.2.6",
-    "prettier": "^2.8.3",
-    "react": "^18.2.0",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.2.0",
-    "react-h5-audio-player": "^3.8.6",
+    "gatsby-plugin-image": "^1.6.0",
+    "gatsby-plugin-manifest": "^3.6.0",
+    "gatsby-plugin-postcss": "^4.6.0",
+    "gatsby-plugin-preact": "^5.6.0",
+    "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-sitemap": "^4.2.0",
+    "gatsby-plugin-tsconfig-paths": "^1.0.3",
+    "gatsby-plugin-typegen": "^2.2.4",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-sharp": "^3.6.0",
+    "postcss": "^8.3.0",
+    "preact": "^10.5.13",
+    "preact-render-to-string": "^5.1.19",
+    "prettier": "^2.3.0",
+    "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-dom": "^17.0.1",
+    "react-h5-audio-player": "^3.7.1",
     "react-helmet": "^6.1.0",
-    "react-intersection-observer": "^9.4.1",
-    "react-parallax": "^3.5.1",
-    "react-qr-code": "^2.0.11",
-    "react-share": "^4.4.1",
-    "react-slick": "^0.29.0",
+    "react-intersection-observer": "^8.32.0",
+    "react-parallax": "^3.3.0",
+    "react-qr-code": "^1.1.1",
+    "react-share": "^4.4.0",
+    "react-slick": "^0.28.1",
+    "simple-react-lightbox": "^3.6.6",
     "slick-carousel": "^1.8.1",
-    "swr": "^2.0.3"
+    "swr": "^0.5.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "autoprefixer": "^10.2.5",
+    "tailwindcss": "^2.1.1",
+    "typescript": "^4.2.4"
   }
 }
