--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fontsource/pt-sans-narrow": "^4.4.5",
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^2.0.14",
+    "@leenguyen/react-flip-clock-countdown": "^1.4.0",
     "@tailwindcss/forms": "^0.3.2",
     "@tailwindcss/typography": "^0.4.1",
     "classnames": "^2.3.1",
